Improve a11y - fix color contrast problems

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Ubuntu&display=swap');
 
 :root {
-	--primary: #222;
-	--secondary: #fff;
-	--tertiary: #099;
+	--dark: #222;
+	--light: #fff;
+	--teal: #099;
+	--gray: #888;
 }
 
 * {
@@ -13,13 +14,13 @@
 }
 
 *:focus {
-	outline: 1px dashed var(--tertiary);
+	outline: 1px dashed var(--teal);
 	outline-offset: 5px;
 }
 
 *::selection {
-	background-color: var(--tertiary);
-	color: var(--secondary);
+	background-color: var(--teal);
+	color: var(--light);
 }
 
 html {
@@ -32,7 +33,7 @@ body {
 	font-size: 1rem;
 	line-height: 1.6rem;
 	overflow: hidden;
-	color: var(--primary);
+	color: var(--dark);
 }
 
 aside {
@@ -42,8 +43,8 @@ aside {
 	position: fixed;
 	height: 100vh;
 	width: 300px;
-	background-color: var(--primary);
-	color: var(--secondary);
+	background-color: var(--dark);
+	color: var(--light);
 }
 
 header {
@@ -57,7 +58,7 @@ header img {
 	user-select: none;
 	max-width: 100%;
 	vertical-align: middle;
-	border: 4px solid var(--tertiary);
+	border: 4px solid var(--teal);
 }
 
 header h1 {
@@ -70,11 +71,11 @@ header p {
 
 nav ul {
 	list-style-type: none;
-	border: 2px solid var(--secondary);
+	border: 2px solid var(--light);
 }
 
 nav ul li {
-	border-bottom: 2px solid var(--secondary);
+	border-bottom: 2px solid var(--light);
 	cursor: pointer;
 	font-size: small;
 	padding: 10px;
@@ -93,7 +94,7 @@ nav ul li:focus {
 }
 
 nav ul li.active {
-	background-color: var(--tertiary);
+	background-color: var(--teal);
 	font-weight: bold;
 	outline: none;
 }
@@ -133,7 +134,7 @@ section h3 {
 
 .section-list-period {
 	grid-row: span 2;
-	opacity: .5;
+	color: var(--gray);
 }
 
 #home {
@@ -155,7 +156,7 @@ section h3 {
 
 .welcome-name,
 .welcome-title {
-	color: var(--tertiary);
+	color: var(--teal);
 	font-size: 2.5rem;
 	font-weight: bold;
 	display: block;
@@ -163,9 +164,9 @@ section h3 {
 }
 
 section a {
-	color: var(--tertiary);
+	color: var(--teal);
 	display: inline;
-	border-bottom: 1px solid var(--tertiary);
+	border-bottom: 1px solid var(--teal);
 	text-decoration: none;
 }
 
@@ -197,8 +198,8 @@ section a {
 	z-index: 11;
 	align-items: center;
 	justify-content: center;
-	background-color: var(--tertiary);
-	color: var(--secondary);
+	background-color: var(--teal);
+	color: var(--light);
 	height: 48px;
 	width: 48px;
 	font-size: 1.5rem;
@@ -208,7 +209,7 @@ section a {
 }
 
 #menu-toggle:active {
-	box-shadow: inset 0 0 5px var(--secondary);
+	box-shadow: inset 0 0 5px var(--light);
 }
 
 @media only screen and (max-width: 800px) {
@@ -234,7 +235,7 @@ section a {
 
 	aside.shown {
 		left: 0;
-		box-shadow: 1px 1px 10px var(--primary);
+		box-shadow: 1px 1px 10px var(--dark);
 	}
 
 	#home {
@@ -253,8 +254,8 @@ section a {
 		display: none;
 	}
 	aside {
-		background-color: var(--secondary);
-		color: var(--primary);
+		background-color: var(--light);
+		color: var(--dark);
 		width: 100vw;
 		height: auto;
 		position: absolute;
@@ -273,7 +274,7 @@ section a {
 
 @media only screen and (prefers-color-scheme: dark) {
 	section {
-		background-color: var(--primary);
-		color: var(--secondary);
+		background-color: var(--dark);
+		color: var(--light);
 	}
 }
